--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -40,3 +40,9 @@ PYTHON_INSTALL("dynamic_graph/sot/youbot" "__init__.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/youbot" "robot.py" "${PYTHON_SITELIB}")
 #PYTHON_INSTALL("dynamic_graph/sot/pr2" "pr2_tasks.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/youbot" "prologue.py" "${PYTHON_SITELIB}")
+
+
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "__init__.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "robot.py" "${PYTHON_SITELIB}")
+#PYTHON_INSTALL("dynamic_graph/sot/pr2" "pr2_tasks.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "prologue.py" "${PYTHON_SITELIB}")
