--- a/package.xml
+++ b/package.xml
@@ -20,15 +20,14 @@
   <build_depend>roscpp</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
+  <build_depend>brics_actuator</build_depend>
   <build_depend>tf</build_depend>
-  <build_depend>urdf</build_depend>
-  <build_depend>urdf_interface</build_depend>
   <build_depend>pr2_controller_interface</build_depend>
   <build_depend>pr2_mechanism_model</build_depend>
+  <build_depend>pr2_controller_manager</build_depend>
   <build_depend>controller_interface</build_depend>
   <build_depend>controller_manager</build_depend>
   <build_depend>control_toolbox</build_depend>
-
 
 
   <run_depend>std_msgs</run_depend>
@@ -37,8 +36,7 @@
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
   <run_depend>tf</run_depend>
-  <run_depend>urdf</run_depend>
-  <run_depend>urdf_interface</run_depend>
+  <run_depend>pr2_controller_manager</run_depend>
   <run_depend>pr2_controller_interface</run_depend>
   <run_depend>pr2_mechanism_model</run_depend>
   <run_depend>controller_interface</run_depend>
