--- a/robot/pr2_sot_controller.yaml
+++ b/robot/pr2_sot_controller.yaml
@@ -47,7 +47,7 @@ sot_youbot:
         l_elbow_flex_joint: {p: 100.0, d: 3.0}
         r_gripper_l_finger_tip_joint: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
         l_forearm_roll_joint: {p: 500.0, d: 6.0}
-        laser_tilt_mount_joint: {p: 0.0, d: 0.0}
+        laser_tilt_mount_joint: {p: 8.0, i = 0.1, d: 0.2}
         r_shoulder_pan_joint: {p: 800.0, d: 10.0}
         r_gripper_motor_slider_joint: {p: 10.0, i: 0.0, d: 0.0, i_clamp: 0.0}
         l_wrist_roll_joint: {p: 400.0, d: 4.0}
@@ -55,8 +55,8 @@ sot_youbot:
         r_elbow_flex_joint: {p: 100.0, d: 3.0}
         head_pan_joint: {p: 25.0, i: 12.0, d: 2.0, i_clamp: 0.5}
         torso_lift_joint: {p: 10000000.0, d: 1000000.0}
-        r_gripper_joint: {p: 0.0, d: 0.0}
-        l_gripper_joint: {p: 0.0, d: 0.0}
+        r_gripper_joint: {p: 10000, d: 1000}
+        l_gripper_joint: {p: 10000, d: 1000}
         l_shoulder_lift_joint: {p: 800.0, d: 10.0}
         r_gripper_l_finger_joint: {p: 0.0, d: 0.0}
         r_forearm_roll_joint: {p: 500.0, d: 6.0}
