--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -3,7 +3,6 @@ FINDPYTHON()
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 
 PYTHON_INSTALL("dynamic_graph/sot/dynamics" "mobile_robot.py" "${PYTHON_SITELIB}")
-
 PYTHON_INSTALL("dynamic_graph/sot/youbot" "__init__.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/youbot" "robot.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/youbot" "prologue.py" "${PYTHON_SITELIB}")
@@ -13,6 +12,12 @@ PYTHON_INSTALL("dynamic_graph/sot/pr2" "__init__.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/pr2" "robot.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/pr2" "prologue.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/pr2" "sot_interface.py" "${PYTHON_SITELIB}")
+
+
+PYTHON_INSTALL("dynamic_graph/sot/ur" "__init__.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "robot.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "prologue.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface.py" "${PYTHON_SITELIB}")
 
 
 PYTHON_INSTALL("rqt_rpc" "__init__.py" "${PYTHON_SITELIB}")
