Add Rpath Enabling macro for deploying controller on real pr2 robot since the realtime loop does not have access to the LD_LIBRARY_PATH variable.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,6 +76,7 @@ target_link_libraries(sot_robot dynamic-graph-python)
 target_link_libraries(sot_robot ros_bridge)
 target_link_libraries(sot_robot ros_interpreter)
 
+#pr2_enable_rpath(sot_robot)
 
 #message(cmakeinstall ${CMAKE_INSTALL_LIBDIR})
 PKG_CONFIG_USE_DEPENDENCY(sot_robot "dynamic-graph")
