--- a/package.xml
+++ b/package.xml
@@ -17,7 +17,7 @@
 
   <build_depend>controller_interface</build_depend>
   <build_depend>controller_manager</build_depend>
-  <build_depend>forward_command_controller</build_depend>
+  <build_depend>control_toolbox</build_depend>
   <build_depend>realtime_tools</build_depend>
   <build_depend>roscpp</build_depend>
   <build_depend>rospy</build_depend>
@@ -25,33 +25,37 @@
   <build_depend>std_msgs</build_depend>
   <build_depend>geometry_msgs</build_depend>
   <build_depend>sensor_msgs</build_depend>
-  <build_depend>brics_actuator</build_depend>
   <build_depend>tf</build_depend>
-  <build_depend>pr2_controller_interface</build_depend>
-  <build_depend>pr2_controller_manager</build_depend>
-  <build_depend>pr2_mechanism_model</build_depend>
-	<build_depend>rospy</build_depend>
-	<build_depend>rqt_gui_py</build_depend>
+  <build_depend>hardware_interface</build_depend>
+  <build_depend>control_msgs</build_depend>
+  <build_depend>xacro</build_depend> 
+  <build_depend>gazebo_ros_control</build_depend>
 
-  <run_depend>pr2_controller_interface</run_depend>
-  <run_depend>pr2_controller_manager</run_depend>
-  <run_depend>pr2_mechanism_model</run_depend>
+
+
+  <run_depend>ur_description</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>std_srvs</run_depend>
   <run_depend>geometry_msgs</run_depend>
   <run_depend>sensor_msgs</run_depend>
-  <run_depend>tf</run_depend>s
+  <run_depend>tf</run_depend>
   <run_depend>controller_interface</run_depend>
   <run_depend>controller_manager</run_depend>
   <run_depend>control_toolbox</run_depend>
+  <run_depend>control_msgs</run_depend>
   <run_depend>realtime_tools</run_depend>
   <run_depend>message_runtime</run_depend>
   <run_depend>roscpp</run_depend>
   <run_depend>rospy</run_depend>
   <run_depend>urdf</run_depend>
-	<run_depend>rospy</run_depend>
-	<run_depend>rqt_gui_py</run_depend>
 
+  <run_depend>realtime_tools</run_depend>
+  <run_depend>hardware_interface</run_depend>
+  <run_depend>gazebo_ros_control</run_depend>
+  <run_depend>ros_controllers</run_depend>
+  <run_depend>xacro</run_depend>   
+  <run_depend>effort_controllers</run_depend>
+  <run_depend>robot_state_publisher</run_depend>
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
