Velocity control in ur robot

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,15 @@ INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 PYTHON_INSTALL("dynamic_graph/sot/dynamics" "mobile_robot.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "__init__.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "robot.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "tom.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "prologue.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface_tom.py" "${PYTHON_SITELIB}")
 
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "__init__.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "robot.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "prologue.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/pr2" "sot_interface.py" "${PYTHON_SITELIB}")
 
 
 
