--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -2,18 +2,16 @@ INCLUDE(../cmake/python.cmake)
 FINDPYTHON()
 INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 
-PYTHON_INSTALL("dynamic_graph/sot/dynamics" "mobile_robot.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/dynamics" "__init__.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/dynamics" "mobile_robot_v3.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "__init__.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/ur" "robot.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "robot_v3.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "tom.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "prologue.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface_tom.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface_v3.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "trajectories.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "derivative_filters.py" "${PYTHON_SITELIB}")
 
-PYTHON_INSTALL("dynamic_graph/sot/pr2" "__init__.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/pr2" "robot.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/pr2" "prologue.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/pr2" "sot_interface.py" "${PYTHON_SITELIB}")
 
 
 
