--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,14 +32,16 @@ set(PKG_CONFIG_ADDITIONAL_VARIABLES
   )
 
 # Search for dependencies.
-ADD_REQUIRED_DEPENDENCY("jrl-mathtools")
-ADD_REQUIRED_DEPENDENCY("jrl-mal")
-ADD_REQUIRED_DEPENDENCY("dynamic-graph")
-ADD_REQUIRED_DEPENDENCY("dynamic_graph_bridge")
-ADD_REQUIRED_DEPENDENCY("dynamic-graph-python")
-ADD_REQUIRED_DEPENDENCY("sot-core")
-ADD_REQUIRED_DEPENDENCY("sot-dynamic")
 
+ADD_REQUIRED_DEPENDENCY("dynamic-graph >=3")
+ADD_REQUIRED_DEPENDENCY("dynamic_graph_bridge >=3")
+ADD_REQUIRED_DEPENDENCY("dynamic-graph-python >= 3")
+ADD_REQUIRED_DEPENDENCY("sot-core >=3")
+ADD_REQUIRED_DEPENDENCY("sot-dynamic-pinocchio")
+ADD_REQUIRED_DEPENDENCY ("hpp-core")
+ADD_REQUIRED_DEPENDENCY ("hpp-model-urdf")
+ADD_REQUIRED_DEPENDENCY ("hpp-model")
+ADD_REQUIRED_DEPENDENCY ("hpp-fcl")
 
 # Python
 INCLUDE(cmake/python.cmake)
@@ -70,13 +72,17 @@ target_link_libraries(sot_robot ros_bridge)
 target_link_libraries(sot_robot ros_interpreter)
 target_link_libraries(sot_robot urdf)
 target_link_libraries(sot_robot control_toolbox)
-
+target_link_libraries(sot_robot hpp-model-urdf)
+target_link_libraries(sot_robot hpp-core)
 
 #message(cmakeinstall ${CMAKE_INSTALL_LIBDIR})
 PKG_CONFIG_USE_DEPENDENCY(sot_robot "dynamic-graph")
 PKG_CONFIG_USE_DEPENDENCY(sot_robot "sot-core")
 PKG_CONFIG_USE_DEPENDENCY(sot_robot "dynamic-graph-python")
-
+PKG_CONFIG_USE_DEPENDENCY (sot_robot  "hpp-model-urdf")
+PKG_CONFIG_USE_DEPENDENCY (sot_robot  "hpp-core")
+PKG_CONFIG_USE_DEPENDENCY (sot_robot  "hpp-fcl")
+PKG_CONFIG_USE_DEPENDENCY (sot_robot  "hpp-model")
 set_target_properties(sot_robot PROPERTIES BUILD_WITH_INSTALL_RPATH True
                       LIBRARY_OUTPUT_DIRECTORY ${PROJECT_SOURCE_DIR}/lib)
 
