Working MVP with SOT collision avoidance.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -106,6 +106,9 @@ install(DIRECTORY robot
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+install(DIRECTORY urdf
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
 
 install(FILES
   robot/ur_sot_controller.yaml
