Latest working changes with CA gain = 0.04; ps_t = 0.01; inf = 2m

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -110,6 +110,10 @@ install(DIRECTORY urdf
    DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
 )
 
+install(DIRECTORY srdf
+   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+)
+
 install(FILES
   robot/ur_sot_controller.yaml
 #   # myfile2
