Updated the controller to use two versions of the controller: The one which was tested on Sep 1 and the other one on development.

--- a/robot/ur_sot_controller_development.yaml
+++ b/robot/ur_sot_controller_development.yaml
@@ -15,7 +15,7 @@ hardware_interface:
 sot_robot:  
     type: sot_robot/RobotControllerPlugin
     robot: "Ur_device"
-    version: "latest"
+    version: "development"
     joints:
         - shoulder_pan_joint
         - shoulder_lift_joint
