--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,9 +5,13 @@ INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
 PYTHON_INSTALL("dynamic_graph/sot/dynamics" "__init__.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/dynamics" "mobile_robot_v3.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "__init__.py" "${PYTHON_SITELIB}")
-PYTHON_INSTALL("dynamic_graph/sot/ur" "robot_v3.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "prologue.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "robot_v3.py" "${PYTHON_SITELIB}")
 PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface_v3.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "prologue_development.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "robot_v3_development.py" "${PYTHON_SITELIB}")
+PYTHON_INSTALL("dynamic_graph/sot/ur" "sot_interface_v3_development.py" "${PYTHON_SITELIB}")
+
 
 
 
